Fix unresponsive bug after iOS swipe on mobile

--- a/src/components/rightMenu/RightMenu.scss
+++ b/src/components/rightMenu/RightMenu.scss
@@ -4,12 +4,6 @@
   }
 }
 
-@media screen and (min-width: 992px) and (max-width: 1280px) {
-  .right-section {
-    display: none;
-  }
-}
-
 .right-section {
   max-width: 240px;
 }
